--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -9,5 +9,6 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
+    "resolveJsonModule": true
   }
 }
