--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@mysten/graphql-transport": "^0.0.6",
     "@mysten/sui.js": "^0.52.0"
   }
 }
