--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.55.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "geist": "^1.3.0",
     "lucide-react": "^0.440.0",
     "next": "^14.2.4",
