--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -1,14 +1,19 @@
 [package]
-name = "dotmove"
+name = "mvr"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.1.4", features = ["derive"] }
 sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk" }
 sui-config = { git = "https://github.com/MystenLabs/sui.git", package = "sui-config" }
+
 anyhow = "1.0"
-tokio = "1.38.0"
+clap = { version = "4.1.4", features = ["derive"] }
+reqwest = { version = "0.12.7" }
 serde = "1.0.204"
-toml = "0.8.14"
 serde_json = "1.0.120"
+tempfile = "3.2"
+tokio = "1.38.0"
+url = "2.5.2"
+toml_edit = "0.22.21"
+toml = "0.8.19"
