--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -9,7 +9,7 @@ sui-config = { git = "https://github.com/MystenLabs/sui.git", package = "sui-con
 
 anyhow = "1.0"
 clap = { version = "4.1.4", features = ["derive"] }
-reqwest = { version = "0.12.7" }
+reqwest = { version = "0.12.7", features = ["json"] }
 serde = "1.0.204"
 serde_json = "1.0.120"
 tempfile = "3.2"
