--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
