--- a/packages/depends-on-demo-on-chain/Move.toml
+++ b/packages/depends-on-demo-on-chain/Move.toml
@@ -3,8 +3,7 @@ name = "nftmaker"
 edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
 
 [dependencies]
-# underscore triggers multi-lock streaming -- will be generalized
-_ = { resolver = "./mvr", network = "testnet", packages = [ "nft@sample", "nft@sample" ] }
+mvr = { resolver = "./mvr", network = "testnet", packages = [ "nft@sample", "nft@sample" ] }
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
