update syntax and types for external resolver

--- a/packages/depends-on-demo-on-chain/Move.toml
+++ b/packages/depends-on-demo-on-chain/Move.toml
@@ -1,9 +1,9 @@
 [package]
 name = "nftmaker"
-edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
+edition = "2024.beta"
 
 [dependencies]
-mvr = { resolver = "./mvr", network = "testnet", packages = [ "nft@sample", "nft@sample" ] }
+mvr = { r."./mvr" = "hi", network = "testnet", packages = [ "nft/sample", "nft/sample" ] }
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
