--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@mysten/dapp-kit": "^0.14.20",
-    "@mysten/sui": "^1.9.0",
+    "@mysten/kiosk": "^0.9.20",
+    "@mysten/sui": "^1.11.0",
     "@mysten/suins": "^0.4.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
