--- a/packages/depends-on-demo-on-chain/Move.toml
+++ b/packages/depends-on-demo-on-chain/Move.toml
@@ -4,14 +4,10 @@ edition = "2024.beta"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
-
-[dependencies.TODO]
-r = { mvr = "@mvr-tst/first-app/1" }
+ToDoReplaceWithDependencyName = { r.mvr = "@mvr-tst/first-app" }
 
 [addresses]
 nftmaker = "0x0"
-
-[r]
 
 [r.mvr]
 network = "mainnet"
