--- a/packages/depends-on-demo-on-chain/Move.toml
+++ b/packages/depends-on-demo-on-chain/Move.toml
@@ -3,12 +3,11 @@ name = "nftmaker"
 edition = "2024.beta"
 
 [dependencies]
-mvr = { r.mvr = "@mvr-tst/first-app/1" }
-
-[r.mvr]
-network = "mainnet"
-
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
+ToDoReplaceWithDependencyName = { r.mvr = "@mvr-tst/first-app" }
 
 [addresses]
 nftmaker = "0x0"
+
+[r.mvr]
+network = "mainnet"
