--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -30,6 +30,7 @@ url = "2.5.2"
 toml_edit = "0.22.21"
 toml = "0.8.19"
 regex = "1.10.5"
+yansi = "1.0.1"
 
 [dev-dependencies]
 expect-test = "1.1"
