--- a/packages/depends-on-demo-on-chain/Move.toml
+++ b/packages/depends-on-demo-on-chain/Move.toml
@@ -4,7 +4,7 @@ edition = "2024.beta"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
-ToDoReplaceWithDependencyName = { r.mvr = "@mvr-tst/first-app" }
+demo = { r.mvr = "@mvr-tst/first-app" }
 
 [addresses]
 nftmaker = "0x0"
