--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -32,6 +32,7 @@ toml = "0.8.19"
 regex = "1.10.5"
 yansi = "1.0.1"
 comfy-table = "7.1.1"
+once_cell = "1.20.2"
 
 [dev-dependencies]
 expect-test = "1.1"
