--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -16,23 +16,27 @@ name = "unit_tests"
 path = "src/tests/unit_tests.rs"
 
 [dependencies]
-sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk" }
-sui-config = { git = "https://github.com/MystenLabs/sui.git", package = "sui-config" }
+sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types" , rev="7e17f2f7"}
+sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="7e17f2f7"}
 
 anyhow = "1.0"
-clap = { version = "4.1.4", features = ["derive"] }
-reqwest = { version = "0.12.7", features = ["json"] }
-serde = "1.0.204"
-serde_json = "1.0.120"
-tempfile = "3.2"
-tokio = "1.38.0"
-url = "2.5.2"
-toml_edit = "0.22.21"
-toml = "0.8.19"
-regex = "1.10.5"
-yansi = "1.0.1"
-comfy-table = "7.1.1"
+clap = { version = "4.5", features = ["derive"] }
+reqwest = { version = "0.12", features = ["json"] }
+serde = "1.0"
+serde_json = "1.0"
+tempfile = "3.13"
+tokio = { version = "1.40.0", features = ["full"] }
+url = "2.5"
+toml_edit = "0.22"
+toml = "0.8"
+regex = "1.11"
 once_cell = "1.20.2"
+yansi = "1.0"
+comfy-table = "7.1"
+dirs = "5.0.1"
+serde_yml = "0.0.11"
+bcs = "0.1.6"
+base64ct = "1.6.0"
 
 [dev-dependencies]
-expect-test = "1.1"
+expect-test = "1.5.0"
