--- a/packages/mvr/Move.toml
+++ b/packages/mvr/Move.toml
@@ -3,7 +3,7 @@ name = "mvr"
 edition = "2024.alpha" # edition = "legacy" to use legacy (pre-2024) Move
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet", override=true }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet", override=true }
 package_info = { local = "../package_info" }
 
 # SuiNS dependency. TODO: Replace with MVR style :))
