--- a/packages/tests/ts_tests/Move.toml
+++ b/packages/tests/ts_tests/Move.toml
@@ -1,10 +1,10 @@
 [package]
-name = "demo"
+name = "ts_tests"
 edition = "2024.beta"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
-demo = "0x0"
+ts_tests = "0x0"
 
