--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,6 +122,7 @@ jobs:
       - name: Rebase release branch
         run: |
           git fetch --all
+          git pull
           git switch release
-          git rebase main
+          git rebase origin main
           git push
