--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -19,8 +19,9 @@ name = "unit_tests"
 path = "src/tests/unit_tests.rs"
 
 [dependencies]
-sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types" , rev="7e17f2f7"}
-sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="7e17f2f7"}
+sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types" , rev="86a9e06"}
+sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="86a9e06"}
+
 
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
@@ -40,6 +41,9 @@ dirs = "5.0.1"
 serde_yml = "0.0.11"
 bcs = "0.1.6"
 base64ct = "1.6.0"
+
+[build-dependencies]
+sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build" , rev="86a9e06"}
 
 [dev-dependencies]
 expect-test = "1.5.0"
