--- a/mvr-cli/Cargo.toml
+++ b/mvr-cli/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/tests/unit_tests.rs"
 [dependencies]
 sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types" , rev="7e17f2f7"}
 sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="7e17f2f7"}
+bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version" }
 
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
