Moves mvr-cli in the crates folder

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -26,12 +26,12 @@ jobs:
 
       - name: Build mvr-cli (debug)
         run: |
-          cargo build
+          cargo build -p mvr
           echo "$(pwd)/target/debug" >> $GITHUB_PATH
 
       - name: Run mvr-cli tests
         run: |
-          cd mvr-cli
+          cd crates/mvr-cli
           cargo nextest run
 
       - name: Get Sui releases JSON file
