--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -23,11 +23,8 @@ sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui
 sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="86a9e06"}
 bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version" }
 
-anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
-serde = "1.0"
-serde_json = "1.0"
 tempfile = "3.13"
 tokio = { version = "1.40.0", features = ["full"] }
 url = "2.5"
@@ -41,6 +38,9 @@ dirs = "5.0.1"
 serde_yml = "0.0.11"
 bcs = "0.1.6"
 base64ct = "1.6.0"
+anyhow = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 
 [build-dependencies]
 sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build" , rev="86a9e06"}
