--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ resolver = "2"
 members = [
     "mvr-cli",
     "crates/mvr-indexer",
-    "crates/mvr-schema"
+    "crates/mvr-schema",
+    "crates/mvr-types"
 ]
 
 [workspace.dependencies]
@@ -15,3 +16,5 @@ chrono = "0.4.39"
 diesel = "2.2.7"
 diesel-async = "0.5.2"
 anyhow = "1.0.95"
+thiserror = "2.0.11"
+once_cell = "1.20.3"
