--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "crates/mvr-cli",
     "crates/mvr-indexer",
     "crates/mvr-schema",
-    "crates/mvr-types"
+    "crates/mvr-types",
+    "crates/mvr-api"
 ]
 
 [workspace.dependencies]
@@ -18,3 +19,4 @@ diesel-async = "0.5.2"
 anyhow = "1.0.95"
 thiserror = "2.0.11"
 once_cell = "1.20.3"
+tracing = "0.1.41"
