--- a/packages/public_names/Move.toml
+++ b/packages/public_names/Move.toml
@@ -3,7 +3,7 @@ name = "public_names"
 edition = "2024.beta"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet", override = true }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet", override = true }
 mvr_subdomain_proxy = { local = "../proxy" }
 
 [addresses]
