--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/tests/unit_tests.rs"
 [dependencies]
 sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types" , rev="86a9e06"}
 sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="86a9e06"}
-bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "f3ab9e11dba953fc5a46f074687578841487a050" }
+bin-version = { git = "https://github.com/mystenlabs/sui"}
 
 clap = { version = "4.5", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
