update dep versions

--- a/crates/mvr-indexer/Cargo.toml
+++ b/crates/mvr-indexer/Cargo.toml
@@ -21,10 +21,11 @@ telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git" }
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
 move-core-types = { git = "https://github.com/MystenLabs/sui.git" }
 
-move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "7a5db383cace688c54027a9dc4949ae6b7da3fdb"}
-move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "7a5db383cace688c54027a9dc4949ae6b7da3fdb"}
+move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "6dabfeaca96f24af1a2376dda4b03ba6729cb918"}
+move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "6dabfeaca96f24af1a2376dda4b03ba6729cb918"}
 
-sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="86a9e06", features = ["serde"]}
+sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde"]}
+sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk"}
 
 mvr-schema = { path = "../mvr-schema" }
 mvr-types = { path = "../mvr-types" }
