--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -19,8 +19,8 @@ name = "unit_tests"
 path = "src/tests/unit_tests.rs"
 
 [dependencies]
-sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types" , rev="86a9e06"}
-sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client" , rev="86a9e06"}
+sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types"}
+sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client"}
 bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version" }
 
 clap = { version = "4.5", features = ["derive"] }
