--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -19,9 +19,9 @@ name = "unit_tests"
 path = "src/tests/unit_tests.rs"
 
 [dependencies]
-sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types"}
-sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client"}
-bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version" }
+sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="86a9e06"}
+sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="86a9e06"}
+bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "e919e84" }
 
 clap = { version = "4.5", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
@@ -43,7 +43,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 
 [build-dependencies]
-sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build" , rev="86a9e06"}
+sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build"}
 
 [dev-dependencies]
 expect-test = "1.5.0"
