--- a/crates/mvr-schema/Cargo.toml
+++ b/crates/mvr-schema/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sui-field-count = { git = "https://github.com/MystenLabs/sui.git"}
+sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84"}
 diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
 dotenvy = { workspace = true }
 serde = { workspace = true }
