--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ anyhow = "1.0.95"
 thiserror = "2.0.11"
 once_cell = "1.20.3"
 tracing = "0.1.41"
+clap = "4.5.31"
+async-trait = "0.1.83"
+bcs = "0.1.6"
+url = "2.5.4"
