--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -23,24 +23,24 @@ sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui
 sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="86a9e06"}
 bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "e919e84" }
 
-clap = { version = "4.5", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
 tempfile = "3.13"
 tokio = { version = "1.40.0", features = ["full"] }
-url = "2.5"
 toml_edit = "0.22"
 toml = "0.8"
 regex = "1.11"
-once_cell = "1.20.2"
 yansi = "1.0"
 comfy-table = "7.1"
 dirs = "5.0.1"
 serde_yml = "0.0.11"
-bcs = "0.1.6"
 base64ct = "1.6.0"
-anyhow = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
+url.workspace = true
+bcs.workspace = true
+once_cell.workspace = true
+anyhow.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 
 [build-dependencies]
 sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build"}
