--- a/crates/mvr-indexer/Cargo.toml
+++ b/crates/mvr-indexer/Cargo.toml
@@ -30,22 +30,22 @@ sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", 
 mvr-schema = { path = "../mvr-schema" }
 mvr-types = { path = "../mvr-types" }
 
-clap = { version = "4.5.20", features = ["env"] }
+clap = { workspace = true, features = ["env"] }
 tempfile = "3.13.0"
 prometheus = "0.13.4"
-tracing = "0.1.40"
-async-trait = "0.1.83"
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
 bigdecimal = "0.4.5"
-bcs = "0.1.4"
 itertools = "0.14.0"
 diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
 diesel-async = { workspace = true, features = ["bb8", "postgres"] }
-serde = { workspace = true }
-anyhow = { workspace = true }
-serde_json = { workspace = true }
-chrono = { workspace = true }
-url = "2.5.4"
+tracing.workspace = true
+async-trait.workspace = true
+bcs.workspace = true
+serde.workspace = true
+anyhow.workspace = true
+serde_json.workspace = true
+chrono.workspace = true
+url.workspace = true
 
 [dev-dependencies]
 
